--- a/styleCSS/style.css
+++ b/styleCSS/style.css
@@ -28,19 +28,28 @@ p {
 /* En-tête de la page */
 
 header {
-    text-align: center;
+    padding-left: 3em;
     background-color: #27211E;
     color: #FFFFFF;
-    height: 12em;
+    display: flex;
+    height: 5em;
     width: 100vw;
     position: fixed;
     top: 0;
     z-index: 100;
 }
 
-hr {
-    border: 1px solid white;
-    width: 25vw;
+#nomTexte {
+    display: block;
+    text-align: center;
+}
+
+header hr {
+
+    border: none;
+    border-left: 1px solid hsla(200, 10%, 50%, 100);
+    height: 3em;
+    width: 1px;
 }
 
 header h1
@@ -71,7 +80,7 @@ header h1 a:hover {
 /* Menu de navigation */
 
 nav {
-    margin: 5px auto 0px auto;
+    margin: 1em 1em;
     display: inline-block;
     text-align: center;
 }
@@ -141,7 +150,7 @@ nav a:hover
 }
 
 #page {
-    margin-top: 12em;
+    margin-top: 5em;
 }
 
 .imageflottante {
@@ -170,10 +179,10 @@ article {
 
 article h1 {
     /* correction pour éviter que le titre passe sous le menu lorsque l'on clique sur l'ancre : il faut créer un décalage. Cependant, cela empêche de cliquer sur les liens car le padding créé se met par dessus, peu importe le z-index renseigné. */
-    padding-top: 6em;
+    padding-top: 5em;
     position: relative;
-    top: -6em;
-    margin-bottom: -6em;
+    top: -5em;
+    margin-bottom: -5em;
 }
 
 table {
@@ -197,11 +206,12 @@ th {
 
 footer {
     text-align: center;
+    display:flex;
     background-color: #27211E;
     color: #FFFFFF;
-    border-top: 1px solid #27211E;
     padding: 3vh 10vw;
     width: 100vw;
+    height:auto;
 }
 
 footer h1 {
