--- a/styleCSS/style.css
+++ b/styleCSS/style.css
@@ -28,28 +28,19 @@ p {
 /* En-tête de la page */
 
 header {
-    padding-left: 3em;
+    text-align: center;
     background-color: #27211E;
     color: #FFFFFF;
-    display: flex;
-    height: 5em;
+    height: 12em;
     width: 100vw;
     position: fixed;
     top: 0;
     z-index: 100;
 }
 
-#nomTexte {
-    display: block;
-    text-align: center;
-}
-
-header hr {
-
-    border: none;
-    border-left: 1px solid hsla(200, 10%, 50%, 100);
-    height: 3em;
-    width: 1px;
+hr {
+    border: 1px solid white;
+    width: 25vw;
 }
 
 header h1
@@ -80,7 +71,7 @@ header h1 a:hover {
 /* Menu de navigation */
 
 nav {
-    margin: 1em 1em;
+    margin: 5px auto 0px auto;
     display: inline-block;
     text-align: center;
 }
@@ -150,7 +141,7 @@ nav a:hover
 }
 
 #page {
-    margin-top: 5em;
+    margin-top: 12em;
 }
 
 .imageflottante {
@@ -179,10 +170,10 @@ article {
 
 article h1 {
     /* correction pour éviter que le titre passe sous le menu lorsque l'on clique sur l'ancre : il faut créer un décalage. Cependant, cela empêche de cliquer sur les liens car le padding créé se met par dessus, peu importe le z-index renseigné. */
-    padding-top: 5em;
+    padding-top: 6em;
     position: relative;
-    top: -5em;
-    margin-bottom: -5em;
+    top: -6em;
+    margin-bottom: -6em;
 }
 
 table {
@@ -206,12 +197,11 @@ th {
 
 footer {
     text-align: center;
-    display:flex;
     background-color: #27211E;
     color: #FFFFFF;
+    border-top: 1px solid #27211E;
     padding: 3vh 10vw;
     width: 100vw;
-    height:auto;
 }
 
 footer h1 {
