--- a/styleCSS/style.css
+++ b/styleCSS/style.css
@@ -170,11 +170,12 @@ form {
 }
 
 article {
-    background-color: rgba(255, 255, 255, 0.75);
-    padding: 15px 20px;
+    background-color: rgba(255, 255, 255, 0.80);
+    padding: 12px 20px;
     margin: 2% 0%;
     border: 2px inset #27211E;
     position: relative;
+    text-align:justify;
 }
 
 article h1 {
